--- a/src/Blazor/RebacExperiments.Blazor/Shared/NavMenu.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Shared/NavMenu.razor
@@ -7,7 +7,7 @@
         <FluentNavGroup Expanded="true"
                         Title="Task Management"
                         Gap="10px">
-             <FluentNavLink Href="/UserTasks" Icon="@(new Icons.Regular.Size20.Info())">User Tasks</FluentNavLink>
+             <FluentNavLink Href="/TaskItems" Icon="@(new Icons.Regular.Size20.Info())">User Tasks</FluentNavLink>
         </FluentNavGroup>
 
         <FluentNavGroup Expanded="true"
