--- a/src/Blazor/RebacExperiments.Blazor/Pages/TaskItemsDataGrid.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Pages/TaskItemsDataGrid.razor
@@ -41,6 +41,10 @@
             <DateTimeFilter PropertyName="CompletedDateTime" FilterState="FilterState"></DateTimeFilter>
         </ColumnOptions>
     </PropertyColumn>
+    <TemplateColumn Title="Actions" Align="@Align.End">
+        <FluentButton IconEnd="@(new Icons.Regular.Size16.Edit())" /> <!-- OnClick="@(() => DemoLogger.WriteLine("Edit clicked"))" -->
+        <FluentButton IconEnd="@(new Icons.Regular.Size16.Delete())" /> <!--OnClick="@(() => DemoLogger.WriteLine("Delete clicked"))"-->
+    </TemplateColumn>
 </FluentDataGrid>
 
 <FluentPaginator State="@Pagination" />
