--- a/src/Blazor/RebacExperiments.Blazor/Components/SiteSettings/SiteSettings.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Components/SiteSettings/SiteSettings.razor
@@ -1,6 +1,6 @@
-﻿@inject IDialogService DialogService
+﻿@namespace RebacExperiments.Blazor.Components
 
-@namespace RebacExperiments.Blazor.Components
+@inject IDialogService DialogService
 
 <FluentButton BackgroundColor="var(--neutral-layer-4)" OnClick="OpenSiteSettingsAsync" Title="Site settings">
     <FluentIcon Value="@(new Icons.Regular.Size20.Settings())" Color="Color.Neutral" Title="Site settings" />
