--- a/src/Blazor/RebacExperiments.Blazor/Pages/Index.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Pages/Index.razor
@@ -1,6 +1,5 @@
-﻿@using RebacExperiments.Shared.ApiSdk;
-
-@page "/"
+﻿@page "/"
+@using RebacExperiments.Shared.ApiSdk
 
 @inject ApiClient ApiClient
 
