--- a/src/Blazor/RebacExperiments.Blazor/Shared/MainLayout.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Shared/MainLayout.razor
@@ -5,14 +5,13 @@
 
 <PageTitle>Relationship-based Experiments with ASP.NET Core OData</PageTitle>
 
-<div @ref="container">
+<div>
     <FluentLayout>
         <FluentHeader Class="siteheader">
             <a href="/">
                 Relationship-based Experiments with ASP.NET Core OData
             </a>
             <FluentSpacer />
-
             <div class="notifications">
                 <NotificationCenter />
             </div>
@@ -20,43 +19,20 @@
                 <SiteSettings />
             </div>
         </FluentHeader>
-
         <FluentStack Class="body-stack" Orientation="Orientation.Horizontal" Width="100%" HorizontalGap="0">
-            <div class="menutoggle">
-                <label for="menu-toggle" class="menu-icon">
-                    <FluentIcon Value="@(new Icons.Regular.Size20.Navigation())" Color="Color.Neutral" />
-                </label>
-                <input type="checkbox" id="menu-toggle" checked=@menuchecked @onclick=HandleChecked />
-
-
-                <nav class="sitenav"
-                     onclick="document.getElementById('menu-toggle').click()">
-                    <NavMenu />
-                </nav>
-            </div>
-            <FluentBodyContent id="body-content" Style="height: calc(100dvh - 90px);">
+            <NavMenu />
+            <FluentBodyContent id="body-content">
                 <div class="content">
                     <article id="article">
-                        
                         <FluentMessageBarProvider Section="@App.MESSAGES_TOP" />
-
-                        <ErrorBoundary @ref="errorBoundary">
-                            <ChildContent>
-                                    @Body
-                            </ChildContent>
-                            <ErrorContent Context="ex">
-                                <div class="blazor-error-boundary">@ex.Message</div>
-                            </ErrorContent>
-                        </ErrorBoundary>
+                        <div>@Body</div>
                     </article>
                     <aside>
-                        <!-- Side Information -->
-                    </aside>
 
+                    </aside>
                     <FluentToastProvider MaxToastCount="10" />
                     <FluentDialogProvider />
                     <FluentTooltipProvider />
-
                 </div>
             </FluentBodyContent>
         </FluentStack>
