--- a/src/Blazor/RebacExperiments.Blazor/Shared/NavMenu.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Shared/NavMenu.razor
@@ -1,19 +1,19 @@
-﻿
-    <FluentNavMenu Title="Main menu">
-        <FluentNavLink Icon="@(new Icons.Regular.Size20.Home())" Href="/" Match="NavLinkMatch.All">
-            <h3>Home</h3>
-        </FluentNavLink>
+﻿<div class="navmenu">
+    <input type="checkbox" title="Menu expand/collapse toggle" id="navmenu-toggle" class="navmenu-icon" />
+    <label for="navmenu-toggle" class="navmenu-icon"><FluentIcon Value="@(new Icons.Regular.Size20.Navigation())" Color="Color.Neutral" /></label>
+    <nav class="sitenav" aria-labelledby="main-menu" onclick="document.getElementById('navmenu-toggle').click()">
+        <FluentNavMenu Id="main-menu" Title="Main menu">
+            <FluentNavLink Icon="@(new Icons.Regular.Size20.Home())" Href="/" Match="NavLinkMatch.All">
+                <h3>Home</h3>
+            </FluentNavLink>
 
-        <FluentNavGroup Expanded="true"
-                        Title="Task Management"
-                        Gap="10px">
-             <FluentNavLink Href="/TaskItems" Icon="@(new Icons.Regular.Size20.Info())">User Tasks</FluentNavLink>
-        </FluentNavGroup>
+            <FluentNavGroup Expanded="true" Title="Task Management" Gap="10px">
+                <FluentNavLink Href="/UserTasks" Icon="@(new Icons.Regular.Size20.Info())">User Tasks</FluentNavLink>
+            </FluentNavGroup>
 
-        <FluentNavGroup Expanded="true"
-                        Title="Identity Management"
-                        Gap="10px">
-             <FluentNavLink Href="/RelationTuples" Icon="@(new Icons.Regular.Size20.Info())">Relation Tuples</FluentNavLink>
-        </FluentNavGroup>
-
-    </FluentNavMenu>
+            <FluentNavGroup Expanded="true" Title="Identity Management" Gap="10px">
+                <FluentNavLink Href="/RelationTuples" Icon="@(new Icons.Regular.Size20.Info())">Relation Tuples</FluentNavLink>
+            </FluentNavGroup>
+        </FluentNavMenu>
+    </nav>
+</div>
