Initial Commit for Navigating to Edit Page

--- a/src/Blazor/RebacExperiments.Blazor/Pages/TaskItem/TaskItemCreate.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Pages/TaskItem/TaskItemCreate.razor
@@ -9,7 +9,5 @@
 
 @inject ApiClient ApiClient
 
-<TaskItemEditForm 
-    TaskItem=@CurrentTaskItem 
-    PersistTaskItem="@(x => Console.Write(x))">
+<TaskItemEditForm TaskItem=@CurrentTaskItem PersistTaskItem="@PersistTaskItem">
 </TaskItemEditForm>
