--- a/src/Blazor/RebacExperiments.Blazor/Pages/TaskItem/TaskItemDetail.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Pages/TaskItem/TaskItemDetail.razor
@@ -8,3 +8,7 @@
 @using RebacExperiments.Shared.ApiSdk.Models;
 
 @inject ApiClient ApiClient
+
+
+<TaskItemEditForm TaskItem=@CurrentTaskItem>
+</TaskItemEditForm>
