Remove weird Enum Select Component

--- a/src/Blazor/RebacExperiments.Blazor/Pages/TaskItem/TaskItemEdit.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Pages/TaskItem/TaskItemEdit.razor
@@ -3,6 +3,7 @@
 @namespace RebacExperiments.Blazor.Pages
 
 @using RebacExperiments.Blazor.Components
+@using RebacExperiments.Blazor.Extensions
 @using RebacExperiments.Blazor.Infrastructure
 @using RebacExperiments.Blazor.Shared.Models;
 @using RebacExperiments.Shared.ApiSdk;
@@ -16,20 +17,26 @@
     <FluentStack Orientation="Orientation.Vertical">
         <div>
             <FluentTextField Name="title" @bind-Value="CurrentTaskItem.Title" Label="Title" Required />
-             <FluentValidationMessage For="@(() => CurrentTaskItem.Title)" />
-         </div>
+            <FluentValidationMessage For="@(() => CurrentTaskItem.Title)" />
+        </div>
          <div>
              <FluentTextArea Name="description" Rows=5 Cols=60 @bind-Value="CurrentTaskItem.Description" Label="Description" Required />
              <FluentValidationMessage For="@(() => CurrentTaskItem.Description)" />
          </div>
          <div>
-             <TaskItemPrioritySelector name="priority" Label="Priority" Required />
+             <FluentSelect TOption="TaskItemPriorityEnum?" @bind-SelectedOption=@CurrentTaskItem.TaskItemPriority @onchange=HandleTaskItemPriority>
+                 <FluentOption Value="-1">@Loc["TaskItemPriorityEnum_Select"]</FluentOption>
+                 @foreach (TaskItemPriorityEnum taskItemPriority in Enum.GetValues<TaskItemPriorityEnum>())
+                 {
+                    <FluentOption Value=@taskItemPriority.ToString() Selected=@(taskItemPriority == CurrentTaskItem.TaskItemPriority)>@Loc[$"TaskItemPriorityEnum_{taskItemPriority.ToString()}"]</FluentOption>
+                 }
+             </FluentSelect>
              <FluentValidationMessage For="@(() => CurrentTaskItem.TaskItemPriority)" />
          </div>
-     </FluentStack>
-     <FluentStack Orientation="Orientation.Horizontal">
-         <FluentButton Type="ButtonType.Submit" Appearance="Appearance.Accent">Save Changes</FluentButton>
-         <FluentButton Appearance="Appearance.Accent">Discard Changes</FluentButton>
-     </FluentStack>
-     
- </EditForm>
+        </FluentStack>
+        <FluentStack Orientation="Orientation.Horizontal">
+            <FluentButton Type="ButtonType.Submit" Appearance="Appearance.Accent">Save Changes</FluentButton>
+            <FluentButton Appearance="Appearance.Accent">Discard Changes</FluentButton>
+        </FluentStack>
+
+    </EditForm>
