Initial Work on Authentication with Blazor

--- a/src/Blazor/RebacExperiments.Blazor/_Imports.razor
+++ b/src/Blazor/RebacExperiments.Blazor/_Imports.razor
@@ -9,3 +9,4 @@
 @using RebacExperiments.Blazor
 @using RebacExperiments.Blazor.Shared
 @using Microsoft.FluentUI.AspNetCore.Components
+@using Microsoft.AspNetCore.Components.Authorization
