--- a/src/Blazor/RebacExperiments.Blazor/_Imports.razor
+++ b/src/Blazor/RebacExperiments.Blazor/_Imports.razor
@@ -10,3 +10,6 @@
 @using RebacExperiments.Blazor.Shared
 @using Microsoft.FluentUI.AspNetCore.Components
 @using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.Extensions.Localization
+@using RebacExperiments.Blazor.Infrastructure
+@using RebacExperiments.Blazor.Localization
