--- a/src/Blazor/RebacExperiments.Blazor/App.razor
+++ b/src/Blazor/RebacExperiments.Blazor/App.razor
@@ -1,21 +1,13 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using RebacExperiments.Blazor.Components.RedirectToLogin
 
+@inject NavigationManager NavigationManager
+
 <FluentDesignTheme StorageName="theme" />
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-                <NotAuthorized>
-                    @if (context.User.Identity?.IsAuthenticated != true)
-                    {
-                        <RedirectToLogin />
-                    }
-                    else
-                    {
-                        <p role="alert">You are not authorized to access this resource.</p>
-                    }
-                </NotAuthorized>
             </AuthorizeRouteView>
         </Found>
         <NotFound>
