--- a/src/Blazor/RebacExperiments.Blazor/Components/RedirectToLogin/RedirectToLogin.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Components/RedirectToLogin/RedirectToLogin.razor
@@ -1,9 +1,17 @@
 @inject NavigationManager Navigation
 
 @code {
-    
+
     protected override void OnInitialized()
     {
-        Navigation.NavigateTo($"Login?returnUrl={Uri.EscapeDataString(Navigation.Uri)}", true);
+        var baseRelativePath = Navigation.ToBaseRelativePath(Navigation.Uri);
+
+        if(string.IsNullOrWhiteSpace(baseRelativePath))
+        {
+            Navigation.NavigateTo($"Login", true);
+        } else
+        {
+            Navigation.NavigateTo($"Login?returnUrl={Uri.EscapeDataString(baseRelativePath)}", true);
+        }
     }
 }
