--- a/src/Blazor/RebacExperiments.Blazor/Pages/Login.razor.css
+++ b/src/Blazor/RebacExperiments.Blazor/Pages/Login.razor.css
@@ -1,30 +1,12 @@
-﻿@keyframes fade {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-.container {
+﻿.container {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    animation: fade 0.2s ease-in-out forwards;
 }
 
 h1 {
     font-size: 35px;
     font-weight: 100;
     text-align: center;
-}
-
-p {
-    font-size: 15px;
-    font-weight: 300;
-    margin: 0;
-    padding-bottom: 12px;
 }
