Add a simple way for Help Pages and Error Messages by using Markdig and the Fluent UI Markdown Example.

--- a/src/Blazor/RebacExperiments.Blazor/Pages/Index.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Pages/Index.razor
@@ -17,4 +17,6 @@
     <FluentButton Appearance="Appearance.Accent" OnClick="SignInUser_Max">Sign In as "max@mustermann.local"</FluentButton>
     <FluentButton Appearance="Appearance.Accent" OnClick="SignOutUser">Sign Out</FluentButton>
     <FluentButton Appearance="Appearance.Accent" OnClick="SendInvalidRequest">Send Invalid Request</FluentButton>
+    <FluentButton Appearance="Appearance.Accent" OnClick="ThrowSystemException">Throw System.Exception</FluentButton>
+    <FluentButton Appearance="Appearance.Accent" OnClick="ThrowODataError">Throw API Error</FluentButton>
 </FluentStack>
