--- a/src/Blazor/RebacExperiments.Blazor/Shared/MainLayout.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Shared/MainLayout.razor
@@ -39,6 +39,7 @@
                                         @{
                                             HandleException(exception);
                                         }
+                                        <div>@Body</div>
                                     </ErrorContent>
                                 </ErrorBoundary>
                             </article>
