Add Error Overview and Links

--- a/src/Blazor/RebacExperiments.Blazor/Pages/Help/ErrorDetail.razor
+++ b/src/Blazor/RebacExperiments.Blazor/Pages/Help/ErrorDetail.razor
@@ -1,9 +1,8 @@
-﻿@page "/Help/ErrorDetails/{ErrorCode}"
-
-@namespace RebacExperiments.Blazor.Pages
-
+﻿@page "/Help/Errors/{ErrorCode}"
 
 @using RebacExperiments.Blazor.Components
+
+@namespace RebacExperiments.Blazor.Pages
 
 @inject ApplicationErrorTranslator ApplicationErrorTranslator
 
